# sdl2-hyper-sonic-drivers

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  cspell.json  sonar-project.properties  vcpkg.json  wave_generators.r
cmake/: copy_runtime_deps.cmake
libs/: CMakeLists.txt
sdl2-hyper-sonic-drivers/: CMakeLists.txt  sdl2-hyper-sonic-drivers.cpp  version.h.in
sdl2-hyper-sonic-drivers/examples/: CMakeLists.txt  adl-example.cpp  adl-play.cpp  mid-example.cpp  mid-example.h  mt32-example.cpp  mus-example.cpp  opl-example.cpp  pcm-example.cpp  rtmidi-example.cpp
sdl2-hyper-sonic-drivers/src/: version.h
sdl2-hyper-sonic-drivers/src/HyperSonicDrivers/: version.h
sdl2-hyper-sonic-drivers/src/HyperSonicDrivers/audio/: DiskRendererMixerManager.cpp  IAudioStream.hpp  IMixer.cpp  IMixer.hpp  IMixerManager.hpp  IRenderer.hpp  MIDI.cpp  MIDI.hpp  PCMSound.cpp  PCMSound.hpp  Renderer.cpp  Renderer.hpp  Sound.cpp  Sound.hpp
sdl2-hyper-sonic-drivers/src/HyperSonicDrivers/devices/: Adlib.cpp  Adlib.hpp  Device.hpp  IDevice.cpp  IDevice.hpp  IMidiDevice.hpp  MT32.cpp  MT32.hpp  Opl.cpp  Opl.hpp  SbPro.cpp  SbPro.hpp  SbPro2.cpp  SbPro2.hpp  makers.hpp  types.hpp
sdl2-hyper-sonic-drivers/src/HyperSonicDrivers/drivers/: IAudioDriver.cpp  IAudioDriver.hpp  IMusicDriver.cpp  IMusicDriver.hpp  MIDDriver.cpp  MIDDriver.hpp  PCMDriver.cpp  PCMDriver.hpp
sdl2-hyper-sonic-drivers/src/HyperSonicDrivers/files/: File.cpp  File.hpp  IFFFile.cpp  IFFFile.hpp  IPCMFile.cpp  IPCMFile.hpp  MIDFile.cpp  MIDFile.hpp  RIFFFile.cpp  RIFFFile.hpp  VOCFile.cpp  VOCFile.hpp  WAVFile.cpp  WAVFile.hpp  loaders.hpp
sdl2-hyper-sonic-drivers/src/HyperSonicDrivers/hardware/: IEmulatedHardware.hpp  IHardware.cpp  IHardware.hpp  PCSpeaker.cpp  PCSpeaker.hpp  types.hpp
sdl2-hyper-sonic-drivers/src/HyperSonicDrivers/utils/: ILogger.cpp  ILogger.hpp  Logger.hpp  algorithms.cpp  algorithms.hpp  constants.cpp  endianness.cpp  endianness.hpp  sound.cpp  sound.hpp
sdl2-hyper-sonic-drivers/src/std/: IDeviceTypesFormatter.hpp  ILoggerFormatter.hpp  MT32EmuReturnCode.hpp  OplTypeFormatter.hpp  eChannelGroupFormatter.hpp
sdl2-hyper-sonic-drivers/test/: CMakeLists.txt  README.testing-notes.md  test_main.cpp
sdl2-hyper-sonic-drivers/test/HyperSonicDrivers/: CMakeLists.txt
sdl2-hyper-sonic-drivers/test/HyperSonicDrivers/audio/: IMixerMock.hpp  TestRenderer.cpp
sdl2-hyper-sonic-drivers/test/HyperSonicDrivers/devices/: EmulatorTestCase.hpp  OplDeviceMock.hpp  SpyDevice.hpp  TestAdlib.cpp  TestIDevice.cpp  TestIMidiDevice.cpp  TestOpl.cpp  TestSbPro.cpp  TestSbPro2.cpp
sdl2-hyper-sonic-drivers/test/HyperSonicDrivers/drivers/: MIDDriverMock.hpp  TestIAudioDriver.cpp  TestIMusicDriver.cpp  TestMIDDriver.cpp  TestPCMDriver.cpp
sdl2-hyper-sonic-drivers/test/HyperSonicDrivers/files/: TestFile.cpp  TestVOCFile.cpp  TestWAVFile.cpp
sdl2-hyper-sonic-drivers/test/HyperSonicDrivers/hardware/: TestPCSpeaker.cpp
sdl2-hyper-sonic-drivers/test/HyperSonicDrivers/utils/: TestAlgorithms.cpp  TestOpl.cpp  TestSound.cpp
sdl2-hyper-sonic-drivers/test/std/: CMakeLists.txt  IDeviceTypesFormatterTest.cpp  ILoggerFormatterTest.cpp
sdl2-sonic-drivers/: CMakeLists.txt  sdl2-sonic-drivers.cpp  sdl2-sonic-drivers.h  version.h.in
sdl2-sonic-drivers/examples/: CMakeLists.txt  adl-example.cpp  mid-example.cpp  mid-example.h  mus-example.cpp  opl-example.cpp  pcm-example.cpp  rtmidi-example.cpp  voc-example.cpp  wav-example.cpp
sdl2-sonic-drivers/src/HyperSonicDrivers/audio/: DiskRendererMixerManager.cpp  DiskRendererMixerManager.hpp  MIDI.hpp  Sound.cpp
sdl2-sonic-drivers/src/HyperSonicDrivers/drivers/: MIDDriver.hpp
sdl2-sonic-drivers/src/HyperSonicDrivers/files/: File.cpp  File.hpp  IFFFile.hpp  MIDFile.cpp  RIFFFile.cpp  VOCFile.cpp
sdl2-sonic-drivers/src/HyperSonicDrivers/utils/: algorithms.cpp  constants.cpp  endianness.cpp
sdl2-sonic-drivers/src/adl/: exceptions.h  sound_adlib.cpp  surroundopl.cpp  wemuopl.h  woodyopl.cpp
sdl2-sonic-drivers/src/audio/: DiskRendererMixerManager.cpp  DiskRendererMixerManager.hpp  MIDI.cpp  MIDI.hpp  SDL2Mixer.cpp  SDL2Mixer.hpp  Sound.cpp  Sound.hpp
sdl2-sonic-drivers/src/audio/midi/: MIDIEvent.cpp  MIDIEvent.hpp  MIDITrack.cpp  MIDITrack.hpp  types.hpp
sdl2-sonic-drivers/src/audio/scummvm/: AudioStream.hpp  Channel.cpp  Channel.hpp  Mixer.hpp  MixerImpl.cpp  MixerImpl.hpp  MixerManager.hpp  RateConverter.cpp  RateConverter.hpp  SDLMixer.cpp  SDLMixerManager.cpp  SDLMixerManager.hpp  SoundHandle.hpp  SoundPC_v1.cpp  SoundPC_v1.hpp  Timestamp.cpp  Timestamp.hpp
sdl2-sonic-drivers/src/drivers/: MIDDriver.cpp  MIDDriver.hpp  MIDParser.cpp  MIDParser.hpp  PCMDriver.cpp  PCMDriver.hpp  VOCDriver.cpp  VOCDriver.hpp  WAVDriver.cpp  WAVDriver.hpp
sdl2-sonic-drivers/src/files/: ADLFile.cpp  ADLFile.hpp  AILDriverFile.cpp  AILDriverFile.hpp  File.cpp  File.hpp  GetMIDI.hpp  IFFFIle.cpp  IFFFile.cpp  IFFFile.hpp  MIDFile.cpp  MIDFile.hpp  RIFFFile.cpp  RIFFFile.hpp  VOCFile.cpp  VOCFile.hpp  WAVFile.cpp  WAVFile.hpp  XMIFile.cpp  XMIFile.hpp
sdl2-sonic-drivers/src/hardware/: PCSpeaker.cpp  PCSpeaker.hpp
sdl2-sonic-drivers/src/std/: OplEmulatorFormatter.hpp  OplTypeFormatter.hpp
sdl2-sonic-drivers/src/utils/: algorithms.cpp  algorithms.hpp  constants.cpp  constants.hpp  endianness.cpp  endianness.hpp  opl.cpp  opl.hpp
sdl2-sonic-drivers/test/: CMakeLists.txt  TestPCSpeaker.cpp  TestWaveGenerators.cpp
sdl2-sonic-drivers/test/HyperSonicDrivers/: CMakeLists.txt  TestWaveGenerators.cpp
sdl2-sonic-drivers/test/audio/: TestSDL2Mixer.cpp
sdl2-sonic-drivers/test/drivers/: MIDDriverMock.hpp  TestMIDDriver.cpp
sdl2-sonic-drivers/test/files/: TestADLFile.cpp  TestAILDriverFile.cpp  TestFile.cpp  TestIFFFile.cpp  TestMIDFile.cpp  TestVOCFile.cpp  TestWAVFile.cpp  TestXMIFile.cpp
sdl2-sonic-drivers/test/fixtures/: D_E1M1.MUS  D_E1M1.mid  header.xmi  header_no_xdir.xmi
sdl2-sonic-drivers/test/hardware/: TestPCSpeaker.cpp
sdl2-sonic-drivers/test/mocks/: MockMixer.hpp
sdl2-sonic-drivers/test/utils/: TestAlgorithms.cpp  TestEndianness.cpp  TestOpl.cpp
(+614 files in other folders)
